# state-machine-testing-course

./: .dir-locals.el  .gitignore  COFFEE_LEVELS.md  ChangeLog.md  Lens_Cheatsheet.md  Other_Languages.md  README.md  StateMachineTesting.md  default.nix  dev.ghci  fp-eedee.cabal  fp-eedee.nix  shell.nix  state-machine-testing-course.cabal  state-machine-testing-course.nix
coffee-state/: Main.hs
level00/: CoffeeMachineTests.hs  ExampleModelProperties.hs  LawPropertiesBonus.hs  Main.hs  MyBTree.hs  PropertyTests.hs  README.md  Types.hs
level01/: CoffeeMachineTests.hs  Main.hs  README.md
level02/: CoffeeMachineTests.hs  Main.hs  README.md
level03/: CoffeeMachineTests.hs  Main.hs  README.md
level04/: CoffeeMachineTests.hs  Main.hs  README.md
level05/: CoffeeMachineTests.hs  Main.hs  README.md
level06/: CoffeeMachineTests.hs  Main.hs  README.md
presentation/: talk.html  talk.org  workshop.html  workshop.org
presentation/dots/: coffee_mach.dot  mach.dot  mach_states.dot  mach_transitions.dot
src/: CoffeeMachine.hs  Ed.hs
src/Ed/: Address.hs  Command.hs
test/: Main.hs
test/Ed/: File.hs  Memory.hs  Types.hs
