cabal-version:       2.2
name:                fp-eedee
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENCE
author:              Sean Chalmers
maintainer:          sclhiannan@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

common level-setup
  default-language:    Haskell2010
  other-modules:       CoffeeMachineTests
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.11 && < 4.13
                     , fp-eedee
                     , hedgehog >= 0.6 && < 0.7
                     , lens > 4.15 && < 4.18
                     , tasty >= 1.1 && < 1.3
                     , tasty-hedgehog >= 0.2 && < 0.3

library
  exposed-modules:     CoffeeMachine
  build-depends:       base >= 4.11 && < 4.13
                     , mtl >= 2.2.2 && < 2.3
                     , lens > 4.15 && < 4.18
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite level01
  import:              level-setup
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      level01

test-suite level02
  import:              level-setup
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      level02

test-suite level03
  import:              level-setup
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      level03

test-suite level04
  import:              level-setup
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      level04

test-suite level05
  import:              level-setup
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      level05
