cabal-version:       2.2
name:                state-machine-testing-course
version:             0.1.0.0
synopsis:            Introductory course for property-based state-machine testing.
description:         Course material for learning about the mechanics and application of property-based state-machine testing.
license:             BSD-3-Clause
-- The file containing the license text.
license-file:        LICENCE
-- The package author(s).
author:              QFPL @ Data61
-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          oᴉ˙ldɟb@uɐǝs
-- A copyright notice.
copyright:           Copyright (C) 2017 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
-- copyright:
category:            Education, Testing
build-type:          Simple
extra-source-files:  ChangeLog.md

common level-setup
  default-language:    Haskell2010
  other-modules:       CoffeeMachineTests
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.11 && < 4.13
                     , state-machine-testing-course
                     , hedgehog >= 0.6 && < 0.7
                     , hedgehog-fn
                     , lens > 4.15 && < 4.18
                     , tasty >= 1.1 && < 1.3
                     , tasty-hedgehog >= 0.2 && < 0.3
                     , containers

library
  exposed-modules:     CoffeeMachine
  build-depends:       base >= 4.11 && < 4.13
                     , mtl >= 2.2.2 && < 2.3
                     , lens > 4.15 && < 4.18
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite level00
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

  build-depends:       base >= 4.11 && < 4.13
                     , state-machine-testing-course
                     , hedgehog >= 0.6 && < 0.7
                     , hedgehog-fn
                     , lens > 4.15 && < 4.18
                     , tasty >= 1.1 && < 1.3
                     , tasty-hedgehog >= 0.2 && < 0.3
                     , containers

  other-modules:       PropertyTests
                     , MyBTree
                     -- [For reference]
                     , ExampleModelProperties

  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      level00

test-suite level01
  import:              level-setup
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      level01

test-suite level02
  import:              level-setup
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      level02

test-suite level03
  import:              level-setup
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      level03

test-suite level04
  import:              level-setup
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      level04

test-suite level05
  import:              level-setup
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      level05

test-suite level06
  import:              level-setup
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      level06
